remove unnecessary endpoints; add query params to get post endpoint
